--- a/ecom_AR.html
+++ b/ecom_AR.html
@@ -216,31 +216,31 @@
         </div>
     </div>
     <!-- Team End -->
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+     <!-- Footer Start -->
+     <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">العنوان</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>67 Mahattet ElKoba, Cairo, Egypt  </p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+20 100 701 5047</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+202 24515545</p>
-                    <p class="mb-2"><i class="fa fa-fax me-3"></i>+202 24515546</p>
+                    <h5 class="theme-text mb-4">العنوان</h5>
+                    <p class="theme-text mb-2"><i class="fa fa-map-marker-alt me-3"></i>67 Mahattet ElKoba, Cairo, Egypt  </p>
+                    <p class="theme-text mb-2"><i class="fa fa-phone-alt me-3"></i>+20 100 701 5047</p>
+                    <p class="theme-text mb-2"><i class="fa fa-phone-alt me-3"></i>+202 24515545</p>
+                    <p class=" theme-text mb-2"><i class="fa fa-fax me-3"></i>+202 24515546</p>
                     
                 </div>
                 <div class="col-lg-3 col-md-6">
                     
-                    <p class="mb-2" style="margin-top: 40px;"><i class="fa fa-envelope me-3"></i>info@alnadascientific.com</p> <!-- Added inline style here -->
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>nada.scientific@yahoo.com</p>
+                    <p class="theme-text mb-2" style="margin-top: 40px;"><i class="fa fa-envelope me-3"></i>info@alnadascientific.com</p> <!-- Added inline style here -->
+                    <p class="theme-text mb-2"><i class="fa fa-envelope me-3"></i>nada.scientific@yahoo.com</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social rounded-circle" href="https://wa.me/+201007015047"><i class="fab fa-whatsapp"></i></a>
-                        <a class="btn btn-outline-light btn-social rounded-circle" href="https://www.facebook.com/alnadascientific"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social rounded-circle" href="https://www.instagram.com/nadascientific0_0/?hl=en"><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-outline-light btn-social rounded-circle" href="https://www.linkedin.com/company/al-nada-scientific-office"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-dark btn-social rounded-circle text-primary" href="https://wa.me/+201007015047"><i class="fab fa-whatsapp"></i></a>
+                        <a class="btn btn-outline-dark btn-social rounded-circle text-primary" href="https://www.facebook.com/alnadascientific"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-dark btn-social rounded-circle text-primary" href="https://www.instagram.com/nadascientific0_0/?hl=en"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-outline-dark btn-social rounded-circle text-primary" href="https://www.linkedin.com/company/al-nada-scientific-office"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                   <h5 class="text-light mb-4"> الشركاء</h5>
+                   <h5 class="theme-text mb-4"> الشركاء</h5>
                     <a class="btn btn-link" href="ecom_AR.html">Ecom</a>
                     <a class="btn btn-link" href="casella_AR.html">Casella</a>
                     <a class="btn btn-link" href="aeroqaul_AR.html">Aeroqual</a>
@@ -249,7 +249,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
 
-                    <h5 class="text-light mb-4">روابط سريعة</h5>
+                    <h5 class="theme-text  mb-4">روابط سريعة</h5>
 
                     <a class="btn btn-link" href="about_AR.html">About Us</a>
                     <a class="btn btn-link" href="contact_AR.html">Contact Us</a>
@@ -260,10 +260,10 @@
         <div class="container">
             <div class="copyright">
                 <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                    <div class="theme-text col-md-6 text-center text-md-start mb-3 mb-md-0">
                         &copy; <a class="border-bottom" href="https://alnadascientific.com/">Al Nada Scientific</a>, All Right Reserved.
                     </div>
-                    <div class="col-md-6 text-center text-md-end">
+                    <div class="theme-text col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
                         , Edited By <a class="border-bottom" href="">Al-Nada Team</a>
