--- a/geotechproducts.html
+++ b/geotechproducts.html
@@ -232,31 +232,31 @@
         </div>
     </div>
     <!-- Team End -->
-     <!-- Footer Start -->
-     <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+    <!-- Footer Start -->
+    <div class="container-fluid bg-dark theme-text footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>67 Mahattet ElKoba, Cairo, Egypt  </p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+20 100 701 5047</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+202 24515545</p>
-                    <p class="mb-2"><i class="fa fa-fax me-3"></i>+202 24515546</p>
+                    <h5 class="theme-text mb-4">Address</h5>
+                    <p class="theme-textmb-2"><i class="fa fa-map-marker-alt me-3"></i>67 Mahattet ElKoba, Cairo, Egypt  </p>
+                    <p class="theme-text mb-2"><i class="fa fa-phone-alt me-3"></i>+20 100 701 5047</p>
+                    <p class="theme-text mb-2"><i class="fa fa-phone-alt me-3"></i>+202 24515545</p>
+                    <p class="theme-text mb-2"><i class="fa fa-fax me-3"></i>+202 24515546</p>
                     
                 </div>
                 <div class="col-lg-3 col-md-6">
                     
-                    <p class="mb-2" style="margin-top: 40px;"><i class="fa fa-envelope me-3"></i>info@alnadascientific.com</p> <!-- Added inline style here -->
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>nada.scientific@yahoo.com</p>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social rounded-circle" href="https://wa.me/+201007015047"><i class="fab fa-whatsapp"></i></a>
-                        <a class="btn btn-outline-light btn-social rounded-circle" href="https://www.facebook.com/alnadascientific"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social rounded-circle" href="https://www.instagram.com/nadascientific0_0/?hl=en"><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-outline-light btn-social rounded-circle" href="https://www.linkedin.com/company/al-nada-scientific-office"><i class="fab fa-linkedin-in"></i></a>
+                    <p class="theme-text mb-2" style="margin-top: 40px;"><i class="fa fa-envelope me-3"></i>info@alnadascientific.com</p> <!-- Added inline style here -->
+                    <p class="theme-text mb-2"><i class="fa fa-envelope me-3"></i>nada.scientific@yahoo.com</p>
+                    <div class="theme-text d-flex pt-2">
+                        <a class="btn btn-outline-dark btn-social rounded-circle text-primary" href="https://wa.me/+201007015047"><i class="fab fa-whatsapp"></i></a>
+                        <a class="btn btn-outline-dark btn-social rounded-circle text-primary" href="https://www.facebook.com/alnadascientific"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-dark  btn-social rounded-circle text-primary" href="https://www.instagram.com/nadascientific0_0/?hl=en"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-outline-dark btn-social rounded-circle text-primary" href="https://www.linkedin.com/company/al-nada-scientific-office"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                   <h5 class="text-light mb-4"> Partners</h5>
+                   <h5 class="theme-text mb-4"> Partners</h5>
                     <a class="btn btn-link" href="ecom.html">Ecom</a>
                     <a class="btn btn-link" href="casella.html">Casella</a>
                     <a class="btn btn-link" href="aeroqaul.html">Aeroqual</a>
@@ -265,7 +265,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
 
-                    <h5 class="text-light mb-4">Quick Links</h5>
+                    <h5 class="theme-text mb-4">Quick Links</h5>
 
                     <a class="btn btn-link" href="about.html">About Us</a>
                     <a class="btn btn-link" href="contact.html">Contact Us</a>
