--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                     
                     <p class="theme-text mb-2" style="margin-top: 40px;"><i class="fa fa-envelope me-3"></i>info@alnadascientific.com</p> <!-- Added inline style here -->
                     <p class="theme-text mb-2"><i class="fa fa-envelope me-3"></i>nada.scientific@yahoo.com</p>
-                    <div class="theme-text d-flex pt-2">
+                    <div class=" d-flex pt-2">
                         <a class="btn btn-outline-dark btn-social rounded-circle text-primary" href="https://wa.me/+201007015047"><i class="fab fa-whatsapp"></i></a>
                         <a class="btn btn-outline-dark btn-social rounded-circle text-primary" href="https://www.facebook.com/alnadascientific"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-dark  btn-social rounded-circle text-primary" href="https://www.instagram.com/nadascientific0_0/?hl=en"><i class="fab fa-instagram"></i></a>
