--- a/critical.html
+++ b/critical.html
@@ -106,6 +106,9 @@
             <!-- Add more languages as needed -->
           </div>
       </div>
+      <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="index.html" class="nav-item nav-link ">Home</a>
