Last Update and fixes :bug:

--- a/about_AR.html
+++ b/about_AR.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>About us</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>عنا -مكتب الندى العلمي</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -113,7 +114,7 @@
                 <a href="about_AR.html" class="nav-item nav-link active">من نحن</a>
                 <a href="contact_AR.html" class="nav-item nav-link">اتصل بنا</a>
                 <a href="service_AR.html" class="nav-item nav-link">التطبيقات</a>
-                <a href="feature_AR.html" class="nav-item nav-link">الشركاء</a>
+                <a href="partners_AR.html" class="nav-item nav-link">الشركاء</a>
             </div>
             <a href="product_AR.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">المنتجات<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
@@ -143,7 +144,7 @@
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                 <div class="d-flex flex-column">
                     <img class="img-fluid rounded w-75 align-self-end" src="img/about-1.jpg" alt="">
-                    <img class="img-fluid rounded w-50 bg-white pt-3 pe-3" src="img/about-2.jpg" alt="" style="margin-top: -25%;">
+                    <img class="img-fluid rounded w-50 bg-white pt-3 pe-3" src="img/about-2.jpg" alt="">
                 </div>
             </div>
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir="rtl">
