--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Al-Nada Scientific Office</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
@@ -122,7 +123,7 @@
                 <a href="about.html" class="nav-item nav-link">About Us</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                 <a href="service.html" class="nav-item nav-link">Applications</a>
-                <a href="feature.html" class="nav-item nav-link">Partners</a>
+                <a href="partners.html" class="nav-item nav-link">Partners</a>
             </div>
             <a href="product.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Products<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
@@ -443,7 +444,7 @@
 
                     </div>
                 </div>
-                <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="feature.html">Read More</a>
+                <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="partners.html">Read More</a>
             </div>
         </div>
     </div>
