--- a/lovibond.html
+++ b/lovibond.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>LoviBond</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LoviBond - Al-Nada Scientific Office</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -113,7 +114,7 @@
             <a href="about.html" class="nav-item nav-link">About Us</a>
             <a href="contact.html" class="nav-item nav-link">Contact</a>
             <a href="service.html" class="nav-item nav-link">Applications</a>
-            <a href="feature.html" class="nav-item nav-link active">Partners</a>
+            <a href="partners.html" class="nav-item nav-link active">Partners</a>
         </div>
         <a href="product.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Products<i class="fa fa-arrow-right ms-3"></i></a>
     </div>
@@ -126,7 +127,7 @@
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="feature.html">Partners</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="partners.html">Partners</a></li>
                     <li class="breadcrumb-item text-primary active" aria-current="page">Lovibond</li>
                 </ol>
             </nav>
