--- a/lovibondproducts_AR.html
+++ b/lovibondproducts_AR.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>LoviBond</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>منتجات LoviBond -مكتب الندى العلمي</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -114,7 +115,7 @@
             <a href="about_AR.html" class="nav-item nav-link">من نحن</a>
             <a href="contact_AR.html" class="nav-item nav-link">اتصل بنا</a>
             <a href="service_AR.html" class="nav-item nav-link">التطبيقات</a>
-            <a href="feature_AR.html" class="nav-item nav-link active">الشركاء</a>
+            <a href="partners_AR.html" class="nav-item nav-link active">الشركاء</a>
         </div>
         <a href="product_AR.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">المنتجات<i class="fa fa-arrow-right ms-3"></i></a>
     </div>
@@ -128,7 +129,7 @@
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="index_AR.html">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="feature_AR.html">Partners</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="partners_AR.html">Partners</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="lovibond_AR.html">Lovibond</a></li>
                     <li class="breadcrumb-item text-primary active" aria-current="page">Lovibond Products</li>
                 </ol>
