--- a/service.html
+++ b/service.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Applications</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Applications - Al-Nada Scientific Office</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -114,7 +115,7 @@
                 <a href="about.html" class="nav-item nav-link">About Us</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                 <a href="service.html" class="nav-item nav-link active">Applications</a>
-                <a href="feature.html" class="nav-item nav-link ">Partners</a>
+                <a href="partners.html" class="nav-item nav-link ">Partners</a>
             </div>
             <a href="product.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Products<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
