--- a/aeroqaul_AR.html
+++ b/aeroqaul_AR.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Aeroqaul</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aeroqaul -مكتب الندى العلمي</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -114,7 +115,7 @@
             <a href="about_AR.html" class="nav-item nav-link">من نحن</a>
             <a href="contact_AR.html" class="nav-item nav-link">اتصل بنا</a>
             <a href="service_AR.html" class="nav-item nav-link">التطبيقات</a>
-            <a href="feature_AR.html" class="nav-item nav-link active">الشركاء</a>
+            <a href="partners_AR.html" class="nav-item nav-link active">الشركاء</a>
         </div>
         <a href="product_AR.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">المنتجات<i class="fa fa-arrow-right ms-3"></i></a>
     </div>
