--- a/ecomproducts_AR.html
+++ b/ecomproducts_AR.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Ecom</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>منتجات Ecom -مكتب الندى العلمي</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -115,7 +116,7 @@
             <a href="about_AR.html" class="nav-item nav-link">من نحن</a>
             <a href="contact_AR.html" class="nav-item nav-link">اتصل بنا</a>
             <a href="service_AR.html" class="nav-item nav-link">التطبيقات</a>
-            <a href="feature_AR.html" class="nav-item nav-link active">الشركاء</a>
+            <a href="partners_AR.html" class="nav-item nav-link active">الشركاء</a>
         </div>
         <a href="product_AR.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">المنتجات<i class="fa fa-arrow-right ms-3"></i></a>
     </div>
@@ -129,7 +130,7 @@
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="index_AR.html">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="feature_AR.html">Partners</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="partners_AR.html">Partners</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="ecom_AR.html">Ecom</a></li>
                     <li class="breadcrumb-item text-primary active" aria-current="page">Ecom Products</li>
                 </ol>
