edit some page titles and add an article in product page :alien:

--- a/AR/aeroqaul_AR.html
+++ b/AR/aeroqaul_AR.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aeroqaul -مكتب الندى العلمي</title>
+    <title>أجهزة مراقبة جودة الهواء (Aeroqual) -مكتب الندى العلمي</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
