--- a/EN/perfect.html
+++ b/EN/perfect.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfect Prime - Al-Nada Scientific Office</title>
+    <title>Environmental & Electrical Analyzers (Perfect Prime) - Al-Nada Scientific Office</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
