add articles to all product pages :bento:

--- a/AR/Tisch_AR.html
+++ b/AR/Tisch_AR.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>أجهزة أخذ عينات الهواء المرتفعة والمنخفضة (Tisch) -مكتب الندى العلمي</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
+    <meta name="description" content="شركة Tisch Environmental تقدم حلول متكاملة لمعدات أخذ عينات الهواء ومراقبة الجزيئات والمعادن.">
+    <meta name="keywords" content="Tisch Environmental, معدات أخذ عينات الهواء, مراقبة الجزيئات, انبعاثات الجزيئات, أخذ عينات الرصاص, المبيدات, PM-10, PM2.5, EPA TO-4A, جودة الهواء">
+   
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
@@ -85,7 +85,7 @@
     <!-- Topbar End -->
 <!-- Navbar Start -->
 <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
-    <a href="../AR/index_AR.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+    <a href="../index_AR.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
         <img src="../img/alnada.png" alt="Logo" class="logo">
     </a>
     
@@ -111,7 +111,7 @@
     </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="../AR/index_AR.html" class="nav-item nav-link ">الرئيسية</a>
+            <a href="../index_AR.html" class="nav-item nav-link ">الرئيسية</a>
             <a href="../AR/about_AR.html" class="nav-item nav-link">من نحن</a>
             <a href="../AR/contact_AR.html" class="nav-item nav-link">اتصل بنا</a>
             <a href="../AR/service_AR.html" class="nav-item nav-link">التطبيقات</a>
@@ -128,7 +128,7 @@
             <h1 class="display-3 text-white mb-3 animated slideInDown">Tisch</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="../AR/index_AR.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="../index_AR.html">Home</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="../AR/partners_AR.html">Partners</a></li>
                     <li class="breadcrumb-item text-primary active" aria-current="page">Tisch</li>
                 </ol>
@@ -148,11 +148,53 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir="rtl">
                     <p class="d-inline-block border rounded-pill py-1 px-4">الشركة</p>
-<h1 class="mb-4">Tisch</h1>
-<p style="text-align: justify;">تعتبر شركة Tisch Environmental معيارًا لمعدات أخذ عينات الهواء بكميات كبيرة والجزيئات والمعادن والمركبات الطيارة والمراقبة المتخصصة. منذ تأسيس الشركة في عام 1954 باسم General Metal Works، توسعت خطوط منتجاتنا من أول جهاز أخذ عينات هواء بحجم كبير لتشمل أجهزة أخذ العينات الفنية والمخصصة. عملاؤنا هم محترفون من كل قطاع في الأسواق التنظيمية والصناعية.</p>
-<p style="text-align: justify;">نحن الخبراء في أخذ عينات الهواء بكميات كبيرة، أخذ عينات الرصاص، أجهزة أخذ عينات الرصاص، مراقبة الجزيئات، انبعاثات الجزيئات، مراقبة المبيدات، أخذ عينات المبيدات، الجزيئات العالقة الكلية، أجهزة أخذ عينات الجزيئات، الطريقة المرجعية الفيدرالية PM-10، الطريقة المرجعية الفيدرالية PM2.5، طريقة EPA TO-4A، طريقة EPA TO-9A، طريقة EPA TO-13A، والمزيد.</p>
-<p style="text-align: justify;">TEI هي عمل عائلي يقع في قرية Cleves، أوهايو. توظف TEI أفرادًا مهرة يتمتعون بخبرة تزيد عن 20 عامًا لكل منهم في تصميم وتصنيع ودعم معدات مراقبة تلوث الهواء. جعلت مصنعنا المجهز جيدًا وفلسفتنا في الجودة وخبرتنا من TEI المورد المفضل لمعدات مراقبة تلوث الهواء. الآن، وبينما نعمل على الجيل الرابع، لدى TEI قدرات تصنيع على أحدث طراز وتتطلع إلى احتياجات المحترفين البيئيين اليوم.</p>
- </div>
+                    <h1>شركة Tisch Environmental ومنتجاتها</h1>
+    
+                    <h2>مقدمة</h2>
+                    <p>تعتبر <strong>شركة Tisch Environmental</strong> (TEI) معيارًا عالميًا في مجال معدات أخذ عينات الهواء، حيث تركز على تقديم حلول متكاملة لأخذ عينات الهواء بكميات كبيرة، بالإضافة إلى مراقبة الجزيئات والمعادن والمركبات الطيارة. منذ تأسيسها في عام 1954، تطورت الشركة بشكل ملحوظ لتصبح واحدة من الرواد في هذا المجال.</p>
+
+                    <h2>تاريخ الشركة</h2>
+                    <p>تأسست Tisch Environmental في البداية باسم <strong>General Metal Works</strong>، وركزت على تصنيع أول جهاز أخذ عينات هواء بحجم كبير. على مر السنوات، توسعت خطوط منتجاتها لتشمل أجهزة أخذ العينات الفنية والمخصصة لتلبية احتياجات عملائها في الأسواق التنظيمية والصناعية.</p>
+
+                    <h2>منتجات Tisch Environmental</h2>
+                    <p>تقدم Tisch مجموعة متنوعة من المنتجات المبتكرة التي تشمل:</p>
+
+                    <h3>1. أجهزة أخذ عينات الهواء</h3>
+                    <ul>
+                        <li><strong>أخذ عينات الهواء بكميات كبيرة:</strong> تم تصميم هذه الأجهزة لجمع عينات دقيقة من الهواء في المواقع الصناعية والبيئية.</li>
+                        <li><strong>أخذ عينات الرصاص:</strong> تساهم هذه الأجهزة في رصد مستويات الرصاص في الهواء والتأكد من الالتزام بالمعايير الصحية.</li>
+                    </ul>
+
+                    <h3>2. مراقبة الجزيئات</h3>
+                    <ul>
+                        <li><strong>جهاز مراقبة الجزيئات:</strong> يستخدم لقياس الجزيئات العالقة وتحديد مستويات التلوث الهوائي، بما في ذلك PM-10 وPM2.5.</li>
+                        <li><strong>أجهزة أخذ عينات الجزيئات:</strong> توفر حلول موثوقة لجمع الجزيئات العالقة واختبارها.</li>
+                    </ul>
+
+                    <h3>3. التحليل الكيميائي</h3>
+                    <ul>
+                        <li><strong>مراقبة المبيدات:</strong> تساهم أجهزة Tisch في رصد مستويات المبيدات في الهواء وتساعد في الحفاظ على السلامة البيئية.</li>
+                        <li><strong>طرق الاختبار المعتمدة:</strong> تشمل الشركة طرقًا مرجعية مثل EPA TO-4A وEPA TO-9A وEPA TO-13A.</li>
+                    </ul>
+
+                    <h2>خدمات Tisch Environmental</h2>
+                    <p>تقدم Tisch Environmental خدمات متكاملة لدعم عملائها، تشمل:</p>
+                    <ul>
+                        <li><strong>التصميم والتصنيع:</strong> تتميز الشركة بخبرة تزيد عن 20 عامًا في تصميم وتصنيع معدات مراقبة تلوث الهواء.</li>
+                        <li><strong>الدعم الفني:</strong> توفر TEI دعمًا فنيًا متخصصًا لضمان تشغيل معداتها بكفاءة.</li>
+                        <li><strong>التطوير المستمر:</strong> تسعى الشركة دائمًا لتحديث وتحسين منتجاتها لتلبية احتياجات المحترفين البيئيين.</li>
+                    </ul>
+
+                    <h2>فلسفة الجودة</h2>
+                    <p>تتبنى Tisch Environmental فلسفة صارمة للجودة، حيث تضمن أن جميع منتجاتها تتوافق مع أعلى المعايير الصناعية. مصنع الشركة مجهز تجهيزًا جيدًا لتلبية احتياجات السوق المتزايدة.</p>
+
+                    <h2>الموقع الجغرافي</h2>
+                    <p>تقع الشركة في <strong>قرية Cleves، أوهايو</strong>، حيث تتميز ببيئة عمل مهنية تسهم في تطوير الحلول البيئية المتقدمة.</p>
+
+                    <h2>الخاتمة</h2>
+                    <p>تظل Tisch Environmental خيارًا مفضلًا لمعدات مراقبة تلوث الهواء، حيث تجمع بين الخبرة الطويلة والجودة العالية. إن التزامها بتقديم حلول مبتكرة يلبي احتياجات عملائها يجعلها من الشركات الرائدة في هذا المجال.</p>
+
+                </div>
             </div>
         </div>
     </div>
