--- a/AR/product_AR.html
+++ b/AR/product_AR.html
@@ -88,7 +88,7 @@
     <!-- Topbar End -->
     <!-- Navbar Start -->
   <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
-    <a href="../AR/index_AR.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+    <a href="../index_AR.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
         <img src="../img/alnada.png" alt="Logo" class="logo">
     </a>
     
@@ -114,7 +114,7 @@
     </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="../AR/index_AR.html" class="nav-item nav-link ">الرئيسية</a>
+            <a href="../index_AR.html" class="nav-item nav-link ">الرئيسية</a>
             <a href="../AR/about_AR.html" class="nav-item nav-link">من نحن</a>
             <a href="../AR/contact_AR.html" class="nav-item nav-link">اتصل بنا</a>
             <a href="../AR/service_AR.html" class="nav-item nav-link">التطبيقات</a>
@@ -131,7 +131,7 @@
             <h1 class="display-3 text-white mb-3 animated slideInDown">Products</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="../AR/index_AR.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="../index_AR.html">Home</a></li>
                     <li class="breadcrumb-item text-primary active" aria-current="page">Products</li>
                 </ol>
             </nav>
