--- a/EN/Tisch.html
+++ b/EN/Tisch.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High and Low Air Samplers (Tisch) - Al-Nada Scientific Office</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
+    <meta name="description" content="Tisch Environmental is a leading provider of air sampling equipment and monitoring solutions for environmental safety.">
+    <meta name="keywords" content="Tisch Environmental, air sampling equipment, particulate monitoring, particulate emissions, lead sampling, pesticides, PM-10, PM2.5, EPA TO-4A, air quality">
+    
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
@@ -85,7 +85,7 @@
     <!-- Topbar End -->
    <!-- Navbar Start -->
    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
-    <a href="../EN/index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+    <a href="../index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
         <img src="img\alnada.png" alt="Logo" class="logo">    </a>
     
     <div class="dropdown">
@@ -110,7 +110,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="../EN/index.html" class="nav-item nav-link ">Home</a>
+            <a href="../index.html" class="nav-item nav-link ">Home</a>
             <a href="../EN/about.html" class="nav-item nav-link">About Us</a>
             <a href="../EN/contact.html" class="nav-item nav-link">Contact</a>
             <a href="../EN/service.html" class="nav-item nav-link">Applications</a>
@@ -126,7 +126,7 @@
             <h1 class="display-3 text-white mb-3 animated slideInDown">Tisch</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="../EN/index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="../index.html">Home</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="../EN/partners.html">Partners</a></li>
                     <li class="breadcrumb-item text-primary active" aria-current="page">Tisch</li>
                 </ol>
