--- a/EN/product.html
+++ b/EN/product.html
@@ -87,7 +87,7 @@
     <!-- Topbar End -->
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
-        <a href="../EN/index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+        <a href="../index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <img src="img\alnada.png" alt="Logo" class="logo">        </a>
        
         <div class="dropdown">
@@ -112,7 +112,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="../EN/index.html" class="nav-item nav-link ">Home</a>
+                <a href="../index.html" class="nav-item nav-link ">Home</a>
                 <a href="../EN/about.html" class="nav-item nav-link">About Us</a>
                 <a href="../EN/contact.html" class="nav-item nav-link">Contact</a>
                 <a href="../EN/service.html" class="nav-item nav-link">Applications</a>
