add the keywords to product pages :sparkless:

--- a/AR/product_AR.html
+++ b/AR/product_AR.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>أجهزة القياسات البيئية -مكتب الندى العلمي</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
+    <meta name="description" content="دليل شامل لأجهزة قياس البيئة وأهميتها في مراقبة جودة الهواء والماء.">
+    <meta name="keywords" content="أجهزة قياس البيئة, محلل غاز المداخن, جهاز مراقبة جودة الهواء, كاشف غاز, مقياس صوت, مقياس ضوء, مقياس اهتزاز, قياس EMF, قياس RF, محلل انبعاثات سيارات, جهاز قياس جودة المياه, محلل غاز النفايات, أنبوب كاشف للغاز, محطة طقس, جمع عينات هواء, قياس النفط, قياس الهيدروكربونات, معايرة, صيانة, أدوات بيئية.">
+    
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
