--- a/EN/product.html
+++ b/EN/product.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Environmental measuring devices - Al-Nada Scientific Office</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
+    <meta name="description" content="A comprehensive guide to environmental measuring devices used across various industries for monitoring and maintaining environmental quality.">
+    <meta name="keywords" content="Flue gas analyzer, air quality monitor, gas detector, sound meter, light meter, vibration meter, EMF measurement, RF measurement, automotive emission analyzer, water quality analyzer, landfill gas analyzer, gas detection tube, weather station, high air sampler, low air sampler, oil measurement, hydrocarbon measurement, environmental monitoring devices, calibration, maintenance, environmental instruments.">
+    
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
